--- a/aboutpage.html
+++ b/aboutpage.html
@@ -32,7 +32,7 @@
                 <ul>
                     <li><a href="contact.html" id="arc-support">Contact</a></li>
                     <li><a href="arcPDF.html" id="eARC-pdf">ARC PDF</a></li>
-                    <li><a href="#about" id="about-eARC">About eARC</a></li>
+                    <li><a href="aboutpage.html" id="about-eARC">About eARC</a></li>
                     <li><a href="dashboard.html" id="head-dashboard">Dashboard</a></li>
                     <li><a href="login.html" id="login-head">Login</a></li>
                 </ul>
