--- a/arcPDF.html
+++ b/arcPDF.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="arcPDF.html" id="eARC-pdf">ARC PDF</a></li>
-                    <li><a href="index.html#about">About eARC</a></li>
+                    <li><a href="aboutpage.html" id="about-eARC">About eARC</a></li>
                     <li><a href="dashboard.html" class="active">Dashboard</a></li>
                     <li><a href="login.html">Login</a></li>
                 </ul>
