--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="arcPDF.html" id="eARC-pdf">ARC PDF</a></li>
-                    <li><a href="#about">About eARC</a></li>
+                    <li><a href="aboutpage.html" id="about-eARC">About eARC</a></li>
                     <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="login.html">Login</a></li>
                 </ul>
