--- a/support.html
+++ b/support.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="arcPDF.html" id="eARC-pdf">ARC PDF</a></li>
-                    <li><a href="#about">About eARC</a></li>
+                    <li><a href="aboutpage.html" id="about-eARC">About eARC</a></li>
                     <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="#login">Login</a></li>
                 </ul>
