--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/shepherd.js@10.0.1/dist/css/shepherd.css">
     <link rel="stylesheet" href="shepherd.js/dist/css/shepherd.css">
     <script src="tour.js"></script>
-    <link href="https://db.onlinewebfonts.com/c/7150534f1c3c68d8ed34eb3090c126b3?family=Futura+Regular" rel="stylesheet">
-    <link href="https://db.onlinewebfonts.com/c/4174065a2c851d5a0a19d2856304dea9?family=Futura-Medium" rel="stylesheet">
-    <link href="https://db.onlinewebfonts.com/c/9ab8abd11c40ee5c8d1905f9c9cb9ac8?family=Futura+Bold" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/futura-std-4" rel="stylesheet">
+                
     
 </head>
 
